[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/enemies/thwomper/Thwomper.png" type="Texture" id=1]
[ext_resource path="res://src/enemies/Thwomper.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 7.5 )

[node name="Thwomper" type="KinematicBody2D"]
script = ExtResource( 2 )
ACCELERATION = 35
GRAVITY = 700
TERMINAL_VELOCITY = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="RecordPositionTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="StopTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true

[node name="CanFallTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="KillPlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlayerArea"]
position = Vector2( 0, -30.5 )
shape = SubResource( 2 )
disabled = true

[connection signal="timeout" from="RecordPositionTimer" to="." method="_on_RecordPositionTimer_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="timeout" from="CanFallTimer" to="." method="_on_CanFallTimer_timeout"]
[connection signal="body_entered" from="KillPlayerArea" to="." method="_on_KillPlayerArea_body_entered"]
